# lipyphilic

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirement.yml  requirements-dev.txt  requirements-dev.yml  requirements.yml  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml  tests.yml
ci/templates/: .appveyor.yml  .travis.yml  tox.ini
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/reference/: analyses.rst  api.rst  index.rst  lipyphilic.rst  transformations.rst  tutorials.rst
docs/reference/analysis/: flip_flop.rst  lateral_diffusion.rst  leaflets.rst  neighbours.rst  order_parameter.rst  registration.rst  z_angles.rst  z_pos.rst  z_thickness.rst
docs/reference/lib/: areas.rst  flip_flop.rst  lateral_diffusion.rst  leaflets.rst  memb_thickness.rst  neighbours.rst  order_parameter.rst  plotting.rst  registration.rst  z_angles.rst  z_pos  z_pos.rst  z_thickness.rst
docs/reference/plotting/: plotting.rst
rust/: .gitignore  Cargo.toml
rust/.github/workflows/: CI.yml
rust/src/: flip_flop.rs  lib.rs
src/lipyphilic/: __init__.py  __main__.py  cli.py  plotting.py  transformations.py
src/lipyphilic/_simple_systems/: simple_systems.py
src/lipyphilic/_simple_systems/xtcs/: .Chol-Flip-Flop.xtc_offsets.npz  .HexGrid-2AtomsPerLipid-TranslatedIn_y.xtc_offsets.npz  ._HexGrid-2AtomsPerLipid-TranslatedIn_y_nojump.xtc_offsets.npz  Chol-Flip-Flop.xtc  HexGrid-2AtomsPerLipid-TranslatedIn_y-GROMACS-nojump.xtc  HexGrid-2AtomsPerLipid-TranslatedIn_y.xtc  _HexGrid-2AtomsPerLipid-TranslatedIn_y_nojump.xtc
src/lipyphilic/analysis/: __init__.py  area_per_lipid.py  flip_flop.py  lateral_diffusion.py  memb_thickness.py  neighbours.py  order_parameter.py  registration.py  z_angles.py  z_positions.py  z_thickness.py
src/lipyphilic/leaflets/: assign_leaflets.py
src/lipyphilic/lib/: area_per_lipid.py  assign_leaflets.py  base.py  flip_flop.py  lateral_diffusion.py  memb_thickness.py  neighbours.py  order_parameter.py  plotting.py  registration.py  z_angles.py  z_position.py  z_positions.py  z_thickness.py
src/lipyphilic/plotting/: __init__.py  plotting.py
src/lipyphilic/transformations/: __init__.py  transformations.py
tests/: __init__.py  test_lipyphilic.py
tests/lipyphilic/: test_transformations.py
tests/lipyphilic/analysis/: test_area_per_lipid.py  test_flip_flop.py  test_lateral_diffusion.py  test_memb_thickness.py  test_neighbours.py  test_order_parameter.py  test_registration.py  test_z_angles.py  test_z_positions.py
tests/lipyphilic/analysis/transformations/: test_transformations.py
tests/lipyphilic/lib/: test_area_per_lipid.py  test_assign_leaflets.py  test_flip_flop.py  test_lateral_diffusion.py  test_memb_thickness.py  test_neighbours.py  test_order_parameter.py  test_plotting.py  test_registration.py  test_z_angles.py  test_z_positions.py  test_z_thickness.py
tests/lipyphilic/plotting/: test_plotting.py
tests/lipyphilic/transformations/: test_transformations.py
