[package]
name = "lipyphilic"
version = "0.12.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_lipyferric"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
