[package]
name = "lipyphilic"
version = "0.13.0-dev0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_lipyferric"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
numpy = "0.26"

[profile.release]
lto = true
